<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:orientation="vertical"
                tools:showIn="@layout/activity_survey"
                tools:context=".SurveyFragment"
    android:padding="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="5dp"
            android:paddingTop="3dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/q1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/excellent_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerExcellent1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/good_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerGood1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fair_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerFair1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/poor_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerPoor1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/q2"
            android:layout_margin="5dp"
            android:paddingTop="3dp"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/excellent_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerExcellent2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/good_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerGood2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fair_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerFair2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/poor_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerPoor2"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/q3"
            android:layout_margin="5dp"
            android:paddingTop="3dp"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/excellent_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerExcellent3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/good_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerGood3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fair_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerFair3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/poor_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerPoor3"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/q4"
            android:layout_margin="5dp"
            android:paddingTop="3dp"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/excellent_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerExcellent4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/good_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerGood4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fair_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerFair4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/poor_text"
                android:background="@color/answerBackground"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/answerPoor4"/>
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Drag Answers here"
        android:layout_margin="3dp"
        android:padding="3dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/question1_txt"
            android:layout_weight="1"
            android:background="@color/answerBackground"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:id="@+id/answerQ1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/question2_txt"
            android:layout_weight="1"
            android:background="@color/answerBackground"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:id="@+id/answerQ2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/question3_txt"
            android:layout_weight="1"
            android:background="@color/answerBackground"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:id="@+id/answerQ3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/question4_txt"
            android:layout_weight="1"
            android:background="@color/answerBackground"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:id="@+id/answerQ4"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barButtonText"
        android:id="@+id/barButton"/>

</LinearLayout>
